<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Movie App</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="poster">Poster</string>
    <string name="rated">Rated</string>
    <string name="plot_summary">Plot Summary</string>
    <string name="ratings">Ratings:</string>
    <string name="genre">Genre</string>
    <string name="language">Language</string>
    <string name="release_date">Release Date</string>
    <string name="search">Search</string>
    <string name="search_hint">Search movies</string>
    <string name="home">Explore</string>
    <string name="box_office">Box Office</string>
    <string name="in_theaters">In Theaters</string>
    <string name="opening">Opening Movies</string>
    <string name="upcoming">Upcoming Movies</string>
    <string name="no_imdb_entry">Can\'t find IMDb id for this movie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="error_connection">No connection</string>
    <string name="error_unknown">Unexpected error</string>
    <string name="retry">Retry</string>
    <string name="more">More</string>
    <string name="share_url">http://www.imdb.com/title/tt%s</string>
    <string name="critics">Critics</string>
    <string name="audience">Audience</string>
    <string name="imdb">IMdB</string>
    <string name="flixster">Flixster</string>
    <string name="tomatoes">Tomatoes</string>
    <string name="metacritic">Metacritic</string>
    <string name="cast">Cast</string>
    <string name="na">N/A</string>

</resources>
